# data-infrastracture

./: .gitignore  Dockerfile  Makefile  README.md  alembic.ini  anomalies.html  autotest.sh  columns.html  constraints.html  deletionOrder.txt  dshack-development.yaml  dshackdb.public.xml  index.html  info-html.txt  insertionOrder.txt  orphans.html  pyproject.toml  relationships.html  requirements.txt  routines.html  skaffold.yaml
alembic/: env.py
alembic/versions/: 2bd90d157593_initial.py  ffcf7c6907c5_addserverdefault.py
datamodel/: Dockerfile  entrypoint.sh  schemaspy.sh.tmpl
db/: stock-data.sql
diagrams/summary/: relationships.real.compact.dot  relationships.real.large.dot
diagrams/tables/: company.1degree.dot  stockprice.1degree.dot
docker/stock/: Dockerfile
kubernetes/: dshack-db.yaml  dshack-local-ci.yaml  dshack-logging.yaml
kubernetes/cluster/: datadog-agent.yaml
kubernetes/development/: autotest.yaml  cronjob.yaml  migration.yaml  postgres.yaml  secret.yaml.tmpl
kubernetes/local/: dshack-test.yaml
kubernetes/local/deploy/: dshack-db.yaml  (+2 more)
kubernetes/staging/: cronjob.yaml  migration.yaml  postgres.yaml
manifest/db/: postgres-development.yaml  postgres-production.yaml  schemaspy-dashboard.yaml
manifest/postgres/: postgres-service.yaml  postgres-sts.yaml
src/: migrate.py
src/main/: migrate.py
src/shellscripts/: autotest.sh  get-stock-prices.sh  postgres-healthcheck.sh  postgres-migrate.sh
src/stock/: migrate.py
src/test/: conftest.py
tables/: company.html  stockprice.html
test/: conftest.py
test/common/: test_common_dao.py
(+29 files in other folders)
